--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
         <!-- Links -->
         <div class="links-container">
             <a href="https://threatintelligence.garden.handsomezebra.com/" class="link-button" target="_blank" rel="noopener noreferrer">Threat Intelligence</a>
+            <a href="https://techscratchpad.garden.handsomezebra.com/" class="link-button" target="_blank" rel="noopener noreferrer">Tech Scratchpad</a>
         </div>
 
         <!-- Footer -->
